# meditamer

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  diagram.json  lefthook.yml  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.gh-csi/: config.toml
.github/workflows/: rust_ci.yml  rust_ci_premerge.yml
.zed/: settings.json
assets/raw/: manifest.json
assets/raw/blue_noise/: blue_noise_32x32_u8.raw  blue_noise_600x600_u8.raw
config/: events.toml  rca-baseline.json
docs/: README.md  sensors.md
docs/archive/: Brainstorming Meditamer Product Vision.md  deep-research-report-2.md  deep-research-report.md
docs/development/: README.md  diagnostics-sd-wifi-tests-plan.md  esp-hal-migration-plan.md  event-engine-guide.md  hardware-test-matrix.md  hostctl-workflow-authoring.md  network-acceptance-agent.md  reliability-issues.md  rust-analyzer.md  sensors.md  sound.md  statig-event-engine-plan.md  telemetry-control-agent.md  telemetry-feasibility.md  touch-engine-plan.md  troubleshoot-agent.md  upload-throughput-history.md
docs/experiments/: shanshui-implementation-plan.md
docs/product/: mvp-features.md  product-vision.md  ux-guidelines.md
docs/todos/: cold-boot-validation.md
scripts/: build.sh  check_commit_message.sh  check_markdown_links.sh  cold_boot_matrix.sh  flash.sh  generate_pirata_digits.py  lint_code_analysis.sh  lint_host_tools.sh  lint_rust_analyzer.sh  make_touch_fixture.sh  marble_metrics.sh  monitor.sh  repaint.sh  runtime_modes_smoke.sh  soak_boot.sh  soak_refresh.sh  tap_capture.sh  test_event_config_host.sh  test_event_engine_host.sh  test_hostctl_host.sh  test_sdcard_burst_regression.sh  test_sdcard_hw.sh  test_touch_core_host.sh  test_touch_replay_host.sh  test_troubleshoot_hw.sh  test_wifi_acceptance.sh  test_wifi_discovery_debug.sh  test_wifi_upload_regression.sh  test_wifi_upload_regression_serial.py  timeset.sh  touch_capture.sh  touch_wizard_dump.sh  upload_assets_http.py  upload_assets_http.sh  wifiset.sh  xtensa_runner.sh
scripts/assets/: export_embedded_assets_raw.py  generate_pirata_digits.py  upload_assets_http.sh
scripts/ci/: check_commit_message.sh  check_markdown_links.sh  lint_code_analysis.sh  lint_host_tools.sh  lint_rust_analyzer.sh  marble_metrics.sh  setup_hooks.sh
scripts/device/: cold_boot_matrix.sh  flash.sh  monitor.sh  repaint.sh  runtime_modes_smoke.sh  soak_boot.sh  soak_refresh.sh  timeset.sh
scripts/lib/: run_hostctl.sh  serial_port.sh
scripts/tests/host/: test_event_config_host.sh  test_event_engine_host.sh  test_hostctl_host.sh  test_touch_core_host.sh  test_touch_replay_host.sh
scripts/tests/hw/: test_sdcard_burst_regression.sh  test_sdcard_hw.sh  test_troubleshoot_hw.sh  test_wifi_acceptance.sh  test_wifi_discovery_debug.sh
scripts/touch/: make_touch_fixture.sh  tap_capture.sh  touch_capture.sh  touch_wizard_dump.sh
src/: gpio_fast.rs  hal.rs  inkplate_hal.rs  lib.rs  main.rs  pirata_clock_font.rs  sd_probe.rs  shanshui.rs  sumi_sun.rs  suminagashi.rs  types.rs
src/app/: config.rs  display.rs  mod.rs  runtime.rs  sd.rs  serial.rs  store.rs  touch_calibration_wizard.rs  types.rs  upload_http.rs
src/app/psram/: TODO.md  mod.rs
src/app/render/: clock.rs  mod.rs  visual.rs
src/app/touch/: config.rs  core.rs  debug_log.rs  integration.rs  mod.rs  normalize.rs  tasks.rs  types.rs
src/app/ui/: TODO.md
src/app/upload/: http.rs  mod.rs  sd_bridge.rs  wifi.rs
src/assets/: pirata_clock_font.rs  suminagashi_blue_noise.rs
src/drivers/: mod.rs  platform.rs
src/drivers/inkplate/: base.rs  clean.rs  clean_impl.inc.rs  control.rs  display.rs  display_impl.inc.rs  graphics.rs  graphics_impl.inc.rs  i2c.rs  i2c_impl.inc.rs  mod.rs  panel.rs  panel_impl.inc.rs  waveform.rs
src/event_engine/: config.rs  features.rs  mod.rs  registry.rs  tap_hsm.rs  trace.rs  types.rs
src/firmware/: bootstrap.rs  mod.rs  store.rs
src/firmware/app_state/: actions.rs  engine.rs  events.rs  machine.rs  mod.rs  snapshot.rs  store.rs  tests.rs  types.rs
src/firmware/assets/: mod.rs
src/firmware/comms/: mod.rs
src/firmware/config/: channels.rs  constants.rs  mod.rs
src/firmware/event_engine/: features.rs  mod.rs  registry.rs  tap_hsm.rs  trace.rs
src/firmware/graphics/: mod.rs  shanshui.rs  sumi_sun.rs  suminagashi.rs
src/firmware/psram/: TODO.md  mod.rs
src/firmware/render/: clock.rs  mod.rs  visual.rs
src/firmware/runtime/: backlight.rs  bootstrap.rs  diagnostics.rs  display_task.rs  face_down.rs  mod.rs  serial_task.rs  service_mode.rs
src/firmware/storage/: mod.rs  mode_store.rs  sd_task.rs  transfer_buffers.rs
src/firmware/telemetry/: counters.rs  mod.rs  recorders.rs  snapshot.rs
src/firmware/touch/: README.md  core.rs  debug_log.rs  integration.rs  mod.rs  normalize.rs  tasks.rs  types.rs  wizard.rs
src/firmware/types/: app_event.rs  base.rs  mod.rs  modes.rs  sd.rs  time_sync.rs  trace.rs  wifi.rs
src/graphics/: sumi_sun.rs  suminagashi.rs
src/inkplate_hal/: clean_impl.inc.rs  control_impl.inc.rs  core_impl.inc.rs  display_impl.inc.rs  i2c_impl.inc.rs  panel_impl.inc.rs  waveform_impl.inc.rs
tests/: embedded_smoke_test.rs
tools/event_config_compiler/: Cargo.toml
tools/event_engine_host_harness/: Cargo.toml  build.rs
tools/hostctl/: Cargo.toml
tools/hostctl/scenarios/: runtime-modes-smoke.sw.yaml  sdcard-hw.sw.yaml  troubleshoot.sw.yaml  wifi-acceptance.sw.yaml  wifi-chaos.sw.yaml  wifi-discovery-debug.default.toml  wifi-discovery-debug.sw.yaml  wifi-policy.default.json
tools/hostctl/src/: env_utils.rs  logging.rs  main.rs  port_detect.rs  scenarios.rs  serial_console.rs  workflows_runtime_modes.rs  workflows_sdcard.rs  workflows_sdcard_tests.rs  workflows_serial.rs  workflows_troubleshoot.rs  workflows_upload.rs  workflows_wifi_acceptance.rs  workflows_wifi_discovery.rs
tools/scene_maker/: AGENTS.md  Cargo.toml  README.md  deep-research-report.md
tools/scene_viewer/: Cargo.toml  README.md
tools/shanshui_preview/: Cargo.toml
tools/touch_replay/: Cargo.toml  README.md  import_touch_log.py  run_fixtures.sh
(+180 files in other folders)
