[package]
name = "meditamer"
version = "0.1.0"
authors = ["Dimitri Fedorov <dimitri.fedorov@suprematic.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "meditamer"
harness = false
test = false

[[test]]
name = "embedded_smoke_test"
harness = false

[lib]
test = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[profile.dev.package.esp-storage]
opt-level = 2

[features]
default = ["esp-hal-runtime", "graphics"]
esp-hal-runtime = []
graphics = ["dep:embedded-graphics", "dep:heapless", "dep:u8g2-fonts"]

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32", "embassy"] }
esp32 = "0.39.0"
esp-println = { version = "0.16.1", default-features = false, features = ["esp32", "log-04", "uart"] }
esp-backtrace = { version = "0.18.1", default-features = false, features = ["esp32", "panic-handler", "println"] }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-sync = "0.7.0"

embedded-graphics = { version = "0.8.1", optional = true }
heapless = { version = "0.8.0", optional = true }
u8g2-fonts = { version = "0.7.2", optional = true }
fixed = { version = "1.29.0", default-features = false }
fixed-sqrt = { version = "0.2.5", default-features = false }
statig = "0.4.1"
esp-storage = { version = "0.8.1", features = ["esp32"] }
embedded-storage = "0.3.1"
sdcard = { path = "packages/sdcard" }

[build-dependencies]
event_config_compiler = { path = "tools/event_config_compiler" }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = ["xtensa-semihosting", "embassy", "external-executor"] }
