[package]
name = "meditamer"
version = "0.1.0"
authors = ["Dimitri Fedorov <dimitri.fedorov@suprematic.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "meditamer"
harness = false
test = false

[[test]]
name = "embedded_smoke_test"
harness = false

[lib]
test = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[profile.dev.package.esp-storage]
opt-level = 2

[profile.dev.package.esp-radio]
opt-level = 3

[features]
default = ["esp-hal-runtime", "graphics"]
esp-hal-runtime = []
graphics = ["dep:embedded-graphics", "dep:heapless", "dep:u8g2-fonts"]
psram-alloc = ["dep:esp-alloc", "esp-hal/psram"]
ui-hybrid = []
asset-upload-http = [
    "dep:embassy-net",
    "dep:embedded-io-async",
    "dep:esp-radio",
    "dep:static_cell",
    "dep:esp-alloc",
    "esp-rtos/esp-radio",
    "esp-rtos/esp-alloc",
]
asset-upload-http-uploader = ["asset-upload-http"]

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32", "embassy"] }
esp32 = "0.39.0"
esp-alloc = { version = "0.9.0", optional = true, default-features = false, features = ["compat", "esp32"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32", "log-04", "uart"] }
esp-backtrace = { version = "0.18.1", default-features = false, features = ["esp32", "panic-handler", "println"] }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-sync = "0.7.0"
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", optional = true, features = ["dhcpv4", "medium-ethernet", "tcp"] }
embedded-io-async = { version = "0.7.0", optional = true }
esp-radio = { version = "0.17.0", optional = true, default-features = false, features = ["esp32", "wifi", "log-04"] }
static_cell = { version = "2.1.0", optional = true }

embedded-graphics = { version = "0.8.1", optional = true }
heapless = { version = "0.8.0", optional = true }
u8g2-fonts = { version = "0.7.2", optional = true }
fixed = { version = "1.29.0", default-features = false }
fixed-sqrt = { version = "0.2.5", default-features = false }
statig = "0.4.1"
esp-storage = { version = "0.8.1", features = ["esp32"] }
embedded-storage = "0.3.1"
sdcard = { path = "packages/sdcard" }

[build-dependencies]
event_config_compiler = { path = "tools/event_config_compiler" }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = ["xtensa-semihosting", "embassy", "external-executor"] }
