[package]
name = "hostctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
glob = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serialport = "4.8"
serverless_workflow_core = "=1.0.0-alpha6.3"
toml = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.15"
